<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="my">我的</string>
    <string name="live">直播</string>
    <string name="home">首页</string>
    <string name="address">上海</string>
    <string name="app_name">Saax</string>
    <string name="classesif">分类</string>
    <string name="ody_title">欧电云</string>
    <string name="shop_cart">购物车</string>
    <string name="digits">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="to">至</string>
    <string name="pen">笔</string>
    <string name="day">日</string>
    <string name="ago">前</string>
    <string name="man">男</string>
    <string name="unit">件</string>
    <string name="year">年</string>
    <string name="piece">件</string>
    <string name="woman">女</string>
    <string name="month">月</string>
    <string name="spread">张</string>
    <string name="common">共</string>
    <string name="next_ci">次</string>
    <string name="dollars">元</string>
    <string name="individual">个</string>
    <string name="money_symbol">¥</string>
    <string name="no">没有</string>
    <string name="add">添加</string>
    <string name="age">年龄</string>
    <string name="all">全部</string>
    <string name="read">阅读</string>
    <string name="more">更多</string>
    <string name="test">测试</string>
    <string name="bind">绑定</string>
    <string name="gift">赠品</string>
    <string name="show">显示</string>
    <string name="help">帮助</string>
    <string name="bill">账单</string>
    <string name="save">保存</string>
    <string name="query">查询</string>
    <string name="faile">失效</string>
    <string name="share">分享</string>
    <string name="clear">清空</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="total">合计</string>
    <string name="order">订单</string>
    <string name="radio">单选</string>
    <string name="stock">库存</string>
    <string name="close">关闭</string>
    <string name="about">关于</string>
    <string name="store">店铺</string>
    <string name="serve">服务</string>
    <string name="price">价格</string>
    <string name="today">今日</string>
    <string name="brand">品牌</string>
    <string name="system">系统</string>
    <string name="affirm">确认</string>
    <string name="screen">筛选</string>
    <string name="choose">选择</string>
    <string name="camera">相机</string>
    <string name="parcel">包裹</string>
    <string name="editor">编辑</string>
    <string name="mobile">手机</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="manage">管理</string>
    <string name="submit">提交</string>
    <string name="search">搜索</string>
    <string name="refund">退款</string>
    <string name="product">商品</string>
    <string name="invoice">发票</string>
    <string name="sals_">已售：</string>
    <string name="comment">评论</string>
    <string name="pattern">模式</string>
    <string name="total_">合计:</string>
    <string name="collect">收藏</string>
    <string name="feright">运费</string>
    <string name="confirm">确定</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="sign_in">签到</string>
    <string name="special">专题</string>
    <string name="pack_up">收起</string>
    <string name="deatile">详情</string>
    <string name="balance">余额</string>
    <string name="predict">预计</string>
    <string name="checkbox">多选</string>
    <string name="register">注册</string>
    <string name="complete">完成</string>
    <string name="password">密码</string>
    <string name="user_sex">性别</string>
    <string name="can_used">可用</string>
    <string name="integral">积分</string>
    <string name="price_">价格：</string>
    <string name="appraise">评价</string>
    <string name="oldprice">原价</string>
    <string name="activity">活动</string>
    <string name="refound">"退款"</string>
    <string name="user_name">昵称</string>
    <string name="scan_code">扫码</string>
    <string name="out_stock">无货</string>
    <string name="money_sum">金额</string>
    <string name="personage">个人</string>
    <string name="logistics">物流</string>
    <string name="yesterday">昨日</string>
    <string name="this_week">本周</string>
    <string name="collection">收藏</string>
    <string name="user_photo">头像</string>
    <string name="get_coupon">领券</string>
    <string name="synthesize">综合</string>
    <string name="this_month">本月</string>
    <string name="redemption">换购</string>
    <string name="public_comm">公共</string>
    <string name="oldprice_">原价：</string>
    <string name="store_level">级店</string>
    <string name="photo_album">相册</string>
    <string name="selectedall">全选</string>
    <string name="with_a_gift">满赠</string>
    <string name="sales_return">退货</string>
    <string name="modification">修改</string>
    <string name="seconds_kill">秒杀</string>
    <string name="delect_nbsp">删 除</string>
    <string name="already_sell">已售</string>
    <string name="account_number">账号</string>
    <string name="already_choose">已选</string>
    <string name="exchange_goods">换货</string>
    <string name="good_reputation">好评</string>
    <string name="settle_accounts">结算</string>
    <string name="to_settle_accounts">去结算</string>
    <string name="content_reputation">条评论</string>
    <string name="expenses_taxation">税费</string>
    <string name="next">下一步</string>
    <string name="used">已使用</string>
    <string name="know">知道了</string>
    <string name="Sale">已售完</string>
    <string name="unpay">待付款</string>
    <string name="unused">未使用</string>
    <string name="coupon">优惠券</string>
    <string name="to_pay">去支付</string>
    <string name="unshow">不显示</string>
    <string name="un_save">不保存</string>
    <string name="new_psd">新密码</string>
    <string name="tocancle">已取消</string>
    <string name="to_audit">待审核</string>
    <string name="completed">已完成</string>
    <string name="gift_card">礼金卡</string>
    <string name="min_price">最低价</string>
    <string name="max_price">最高价</string>
    <string name="visit_the">去逛逛</string>
    <string name="page_view">浏览量</string>
    <string name="unappraise">待评价</string>
    <string name="for_refund">待退款</string>
    <string name="have_refund">已退款</string>
    <string name="out_of_date">已过期</string>
    <string name="unReceiving">待收货</string>
    <string name="A_refund_of">退款中</string>
    <string name="phone_number">手机号</string>
    <string name="verification">验证码</string>
    <string name="img_verification">图形验证码</string>
    <string name="order_b_coed">订单号</string>
    <string name="not_can_used">无可用</string>
    <string name="ranking_list">排行榜</string>
    <string name="active_region">活动区</string>
    <string name="please_select">请选择</string>
    <string name="verification_">验证码 :</string>
    <string name="undeliver_goods">待发货</string>
    <string name="exchange_goods_now">换货中</string>
    <string name="hot_sell_billboard">热销榜</string>
    <string name="already_authentication">已认证</string>
    <string name="unalready_authentication">未认证</string>
    <string name="nowBuy">立即购买</string>
    <string name="pay_way">支付方式</string>
    <string name="no_more">没有更多</string>
    <string name="myPhoto">我的相册</string>
    <string name="my_gold">我的金币</string>
    <string name="my_order">我的订单</string>
    <string name="all_type">全部分类</string>
    <string name="standard">规格参数</string>
    <string name="loderror">加载错误</string>
    <string name="addcart">加入购物车</string>
    <string name="noteerror">网络错误</string>
    <string name="productId">商品编号</string>
    <string name="show_gift">查看赠品</string>
    <string name="to_passable">去凑单</string>
    <string name="shop_share">店铺分享</string>
    <string name="creat_time">创建时间</string>
    <string name="all_orders">所有订单</string>
    <string name="order_coed">订单编号</string>
    <string name="order_info">订单详情</string>
    <string name="modify_psd">修改密码</string>
    <string name="welcome_to">欢迎来到</string>
    <string name="his_general">全场通用</string>
    <string name="apply_after">申请售后</string>
    <string name="add_succeed">添加成功</string>
    <string name="check_order">查看订单</string>
    <string name="apply_again">重新申请</string>
    <string name="load_finish">加载完毕</string>
    <string name="set_default_address">设为\n默认</string>
    <string name="my_integral">我的积分</string>
    <string name="product_name">商品名称</string>
    <string name="apply_refund">申请退款</string>
    <string name="delect_order">删除订单</string>
    <string name="delect_faile">删除失败</string>
    <string name="submit_order">提交订单</string>
    <string name="product_info">商品详情</string>
    <string name="no_inventory">暂无库存</string>
    <string name="cancel_order">取消订单</string>
    <string name="choose_more">最多可选择</string>
    <string name="confirm_order">确认订单</string>
    <string name="collect_faile">收藏失败</string>
    <string name="product_total">商品总额</string>
    <string name="my_gif_card">我的礼金卡</string>
    <string name="delect_succeed">删除成功</string>
    <string name="show_logistics">查看物流</string>
    <string name="choose_product">选择商品</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="user_agreement">用户协议</string>
    <string name="move_attention">移入收藏</string>
    <string name="confirm_delect">确定删除</string>
    <string name="submit_succeed">提交成功</string>
    <string name="update_succeed">更新成功</string>
    <string name="complete_submit">确认提交</string>
    <string name="receive_address">收货地址</string>
    <string name="input_phone">请输入手机号</string>
    <string name="clear_succeed_">清空成功!</string>
    <string name="collect_succeed">收藏成功</string>
    <string name="product_collect">商品收藏</string>
    <string name="more_recommended">更多推荐</string>
    <string name="inventory_nervou">库存紧张</string>
    <string name="inventory_enough">库存充足</string>
    <string name="inventory_nervous">库存紧张</string>
    <string name="service_agreement">服务协议</string>
    <string name="input_new_psd">请输入新密码</string>
    <string name="back_to_shopcart">返回购物车</string>
    <string name="prduct_total_prices">商品总价</string>
    <string name="recommended_for_you">为您推荐</string>
    <string name="continue_settlement">继续结算</string>
    <string name="operation_successful">操作成功</string>
    <string name="please_confirm_psd">请确认密码</string>
    <string name="addressmanage_change">修改成功</string>
    <string name="seckill_rush_purchase">秒杀抢购</string>
    <string name="cancel_exchange_goods">取消换货</string>
    <string name="addressmanage_location">所在地区</string>
    <string name="inventory_insufficient">库存不足</string>
    <string name="cancel_collect_faile">取消收藏失败</string>
    <string name="ResembleRecommend">相似好货为你推荐</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="cancel_collect_succeed">取消收藏成功</string>
    <string name="add_to_shopcart_faile">加入购物车失败</string>
    <string name="input_validate_code">请输入手机验证码</string>
    <string name="add_to_shopcart_succeeed">加入购物车成功</string>
    <string name="confirm_take_delivery_of_goods">确认收货</string>
    <string name="default_address">默认</string>
    <string name="install_up">安装了:</string>
    <string name="uninstallup">卸载了:</string>
    <string name="order_code_">"订单编号: "</string>
    <string name="refund_reason_">退款原因:\t</string>
    <string name="refund_instructions_t">退款说明:\t</string>
    <string name="exchange_goods_instructions">换货说明:\t</string>
    <string name="exchange_goods_instructions_t">换货原因:\t</string>
    <string name="zero">99</string>
    <string name="othermore">99+</string>
    <string name="load_in_">加载中...</string>
    <string name="contacts_">联  系  人</string>
    <string name="waite_code">敬请期待!</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="noprodut">商品库存不足</string>
    <string name="invalid_url">地址不合法</string>
    <string name="my_address">我的收货地址</string>
    <string name="feil_notfind">文件不存在</string>
    <string name="webErro">哎呀！网络不给力</string>
    <string name="please_inputtext">请输入内容</string>
    <string name="not_to_install_qq">没有安装QQ</string>
    <string name="loading_waiting">努力加载中...</string>
</resources>