<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/man_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/distance_44"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_back_normal"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/shop_cart"
            android:textColor="@color/sub_title_color"
            android:textSize="@dimen/font_18" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_shopcart_editbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:text="@string/editor"
                android:textColor="@color/main_title_color"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/img_shopcart_edit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_more"
                android:visibility="gone" />

        </LinearLayout>

        <com.ody.p2p.views.tablayout.CirTextView
            android:id="@+id/iv_has_msg"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="8sp"
            android:visibility="gone" />

    </RelativeLayout>

    <View style="@style/liner_horizontal" />

    <include
        android:id="@+id/layout_loadfail"
        layout="@layout/view_failed_load"
        android:visibility="gone" />

    <com.ody.p2p.views.scrollbanner.ScrollBanner
        android:id="@+id/scroll_advertis_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/advertisement_backgrond" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/shop_recycleview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="afterDescendants"
            android:fillViewport="true" />

        <ImageView
            android:id="@+id/img_totop_button"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/shopcart_top_button"
            android:visibility="gone" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/linear_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <View style="@style/liner_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_allselect"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/selected_false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/selectedall"
                android:textColor="@color/main_title_color"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/linear_edit_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical|right"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_shopcart_share"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:background="@drawable/white_bule_button"
                    android:text="@string/share"
                    android:textColor="@drawable/button_black_white"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_shopcart_move_attention"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/white_bule_button"
                    android:text="@string/move_attention"
                    android:textColor="@drawable/button_black_white"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_deleteselect"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/white_red_button"
                    android:text="@string/delete"
                    android:textColor="@drawable/button_red_white"
                    android:textSize="@dimen/textsize_14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_bottom_ber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_"
                        android:textColor="@color/theme_color"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_shopcart_Zprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="¥0"
                        android:textColor="@color/theme_color"
                        android:textSize="12sp" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/unfreight"
                    android:textColor="@color/main_title_color"
                    android:textSize="10sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_shopcart_topay"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:background="@color/theme_color"
                android:clickable="true"
                android:text="@string/to_pay"
                android:textColor="@drawable/topay_btn_color" />
        </LinearLayout>

        <View style="@style/liner_horizontal" />
    </LinearLayout>
</LinearLayout>