<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_color"
    >
    <View
        android:id="@+id/view_first"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/divider_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lay_circle"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lay_address_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_title_color"
                android:textSize="14sp"
                android:singleLine="true"
                android:layout_marginLeft="12dp"
                android:maxLength="6"/>

            <TextView
                android:id="@+id/tv_user_telNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:singleLine="true"
                android:textColor="@color/main_title_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_certification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_authentication"
                android:layout_marginLeft="15dp"
                android:textSize="12sp"
                android:visibility="gone"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                />
        </LinearLayout>



        <TextView
            android:id="@+id/tv_address_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/sub_title_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/radio_btn_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_coupon"
                android:clickable="true"
                android:scrollbarSize="10dp"
                android:text="@string/set_default_address"
                android:textColor="@color/theme_color"
                android:textSize="12sp"
                android:drawablePadding="5dp"
                android:layout_marginLeft="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"

                />

            <TextView
                android:id="@+id/tv_address_edit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/address_editor"
                android:gravity="center"
                android:text="@string/editor"
                android:layout_marginRight="14dp"
                android:textSize="12sp"
                android:textColor="@color/main_title_color"
                android:drawablePadding="5dp"/>

            <TextView
                android:id="@+id/tv_address_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/address_delete"
                android:gravity="center"
                android:text="@string/delete"
                android:layout_marginRight="12dp"
                android:drawablePadding="5dp"
                android:textSize="12sp"
                android:textColor="@color/main_title_color"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>