<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingRight="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/img_gift_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/kucun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transp_black_50"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/no_inventory"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="invisible" />
        </FrameLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_label_gift_itme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gift"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:background="@drawable/circle_theme_stroke_bg"
                    android:textColor="@color/theme_color"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tv_giftname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginLeft="4dp"
                    android:singleLine="true"
                    android:text="@string/product_name"
                    android:textColor="@color/sub_title_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="true"
                android:gravity="bottom">

                <TextView
                    android:id="@+id/tv_gifprice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="¥0.00"
                    android:textSize="12sp"
                    android:textColor="@color/theme_color" />

                <TextView
                    android:id="@+id/tv_giftCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x1"
                    android:textColor="@color/note_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_changeGif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/icon_next"
            android:text="@string/choose_gift"
            android:textColor="@color/main_title_color"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>


    <TextView
        android:id="@+id/show_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/icon_next"
        android:text="@string/show_gift"
        android:textColor="@color/main_title_color"
        android:textSize="12sp"
        android:visibility="gone" />

</LinearLayout>
